* Fix scrollbars issue on mobiles cuased due to floated columns in footer

--- a/assets/css/src/layout-responsive.scss
+++ b/assets/css/src/layout-responsive.scss
@@ -19,6 +19,7 @@
     #site-footer-container .fc{
       width: 100%;
       box-sizing: border-box;
+      float: none;
     }
     #sb1 {
       background: $light-2
